--- a/scss/layout/_content.scss
+++ b/scss/layout/_content.scss
@@ -1,33 +1,78 @@
 .middle-content {
     .verify-btn {
         text-align: center;
-        padding: 105px 0;
+        padding: 130px 0;
+        @media screen and (min-width: 320px) and (max-width: 767px) {
+            padding: 60px 0px;
+        }
+
+        @media screen and (min-width: 768px) and (max-width: 1023px) {
+            padding: 70px 0px;
+        }
         button {
-            width: 570px;
-            height: 150px;
-            border-radius: 20px;
-            line-height: 150px;
+            width: 400px;
+            height: 120px;
             text-align: center;
-            background-color: #F69765;
+            background-color: #f69765;
             color: #fff;
-            font-size: 40px;
-            border: 1px solid  #F69765;
-            font-weight: 900;
+            font-size: 25px;
+            border: 1px solid #f69765;
+            font-weight: 700;
+            border-radius: 20px;
+            @media screen and (min-width: 320px) and (max-width: 767px) {
+                width: 260px;
+                height: 95px;
+                font-size: 20px;
+            }
+            &:hover {
+                background-color: #fff;
+                border: 1px solid #f69765;
+                color: #f69765;
+            }
         }
     }
     .find-mobile {
-        background-color: #F69765;
-        padding: 126px 0px;
-        .mg-grid {
+        // background-color: #F69765;
+        background-image: url(/images/content-bg.png);
+        height: 340px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 150px 0px;
+        @media screen and (min-width: 320px) and (max-width: 767px) {
+            height: auto;
+            padding: 60px 0px;
+        }
+        @media screen and (min-width: 768px) and (max-width: 1023px) {
+            padding: 115px 0px 0px;
+        }
+        .m-grid {
             display: grid;
             grid-template-columns: auto 1fr;
             grid-gap: 76px;
             align-items: center;
+            padding: 0px 65px;
+            @media screen and (min-width: 320px) and (max-width: 767px) {
+                grid-template-columns: 1fr;
+                grid-template-rows: 1fr 1fr;
+                grid-gap: 40px;
+                padding: 0px 20px;
+            }
+            @media screen and (min-width: 768px) and (max-width: 1023px) {
+                grid-template-columns: 1fr;
+                grid-gap: 35px;
+                padding: 0px 50px;
+                justify-items: center;
+            }
         }
         h3 {
-            font-size: 60px;
+            font-size: 40px;
             line-height: 30px;
             font-weight: 400;
+            text-transform: uppercase;
+            @media screen and (min-width: 320px) and (max-width: 767px) {
+                font-size: 27px;
+                line-height: 37px;
+            }
         }
     }
 }
