--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,22 +1,57 @@
-footer  {
-    background-color:#110702;
+footer {
+    background-color: #110702;
     color: #fff;
 
     .footer-content {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 1fr auto;
         grid-gap: 67px;
-        padding: 90px 160px 0px 160px; 
+        justify-items: center;
+        padding: 90px 65px 20px;
+        @media screen and (min-width: 320px) and (max-width: 767px) {
+            grid-template-rows: 1fr 1fr;
+            grid-template-columns: 1fr;
+            grid-gap: 0px;
+            padding: 20px 20px;
+        }
+        @media screen and (min-width: 768px) and (max-width: 1023px){
+            padding: 40px 20px;
+        }
         .footer-info {
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
-            align-items: center;
+            grid-gap: 157px;
+            align-items: baseline;
+            @media screen and (min-width: 320px) and (max-width: 767px) {
+                grid-template-columns: 1fr;
+                grid-template-rows: 1fr 1fr 1fr;
+                grid-gap: 0px;
+            }
             h2 {
-                font-size: 64px;
+                font-size: 46px;
                 font-weight: 700;
                 font-style: normal;
             }
+            .footer-address {
+                display: grid;
+                grid-template-columns: auto 1fr;
+                grid-gap: 22px;
+                .mail-address {
+                    line-height: 24px;
+                    font-size: 20px;
+                }
+                p {
+                    font-size: 20px;
+                    line-height: 36px;
+                }
+            }
+        }
+        p {
+            align-self: center;
+            font-size: 18px;
+            font-weight: 400;
+            font-style: normal;
         }
     }
 }
