--- a/scss/layout/_general.scss
+++ b/scss/layout/_general.scss
@@ -8,21 +8,29 @@ body {
 .main-container {
     max-width: 1920px;
     margin: 0 auto;
-    .inner-container {
-        max-width: 1790px;
-        margin: 0 auto;
-    }
 }
 button {
     border-radius: 10px;
-    width: 305px;
-    height: 91px;
+    width: 150px;
+    height: 50px;
     color:#D3531A;
     cursor: pointer;
-    line-height: 91px;
+    @media screen and (min-width: 320px) and (max-width: 767px) {
+        width: 115px;
+    }
 }
 .playstore-btn {
     display: grid;
     grid-template-columns: auto 1fr;
     grid-gap: 30px;
+    @media screen and (min-width: 320px) and (max-width: 767px) {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        justify-items: center;
+    }
+    a {
+        img{
+            width: 250px;
+        }
+    }
 }
